[workspace]
members = [
  "mincamlc",
  "typedefs",
  "util",
  "pervasives",
  "span",
  "ast",
  "parser",
  "ty",
  "typing",
  "ir_typed_ast",
  "ir_knorm",
  "ir_closure",
  "ir_asm_virtual_ast_isa1st",
  "ir_asm_virtual_isa1st",
  "ir_asm_ast_isa1st",
  "ir_asm_parser_isa1st",
  "bingen_isa1st",
  "debug_symbol",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
typedefs.path = "./typedefs"
util.path = "./util"
pervasives.path = "./pervasives"
span.path = "./span"
ast.path = "./ast"
parser.path = "./parser"
ty.path = "./ty"
typing.path = "./typing"
ir_typed_ast.path = "./ir_typed_ast"
ir_knorm.path = "./ir_knorm"
ir_closure.path = "./ir_closure"
ir_asm_virtual_ast_isa1st.path = "./ir_asm_virtual_ast_isa1st"
ir_asm_virtual_isa1st.path = "./ir_asm_virtual_isa1st"
ir_asm_ast_isa1st.path = "./ir_asm_ast_isa1st"
ir_asm_parser_isa1st.path = "./ir_asm_parser_isa1st"
bingen_isa1st.path = "./bingen_isa1st"
debug_symbol.path = "./debug_symbol"
typed-arena = "2.0.1"
peg = "0.8.1"
lalrpop = "0.19.8"
lalrpop-util = "0.19.8"
plex = "0.2.5"
log = "0.4.17"
env_logger = "0.10.0"
thiserror = "1.0.37"
bitvec = "1.0.1"
multimap = "0.8.3"
smallvec = "1.10.0"
once_cell = "1.16.0"
rayon = "1.6.0"
itertools = "0.10.5"
ordered-float = "3.4.0"
serde.version = "1.0.188"
serde.features = ["derive"]
serde_json = "1.0"
cfg-if = "1.0"
annotate-snippets.version = "0.9.1"
annotate-snippets.features = ["color"]
clap.version = "4.1.1"
clap.features = ["derive"]
