[package]
name = "ir_closure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typedefs.workspace = true
ast.workspace = true
ty.workspace = true
ir_knorm.workspace = true
log.workspace = true
pervasives.workspace = true
