[package]
name = "typing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
span.workspace = true
ast.workspace = true
ty.workspace = true
pervasives.workspace = true
once_cell.workspace = true
log.workspace = true
